--- a/style.css
+++ b/style.css
@@ -1,9 +1,61 @@
-body {
-    background-color: #F6EBE1;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Bellota", system-ui;
 }
 
-.rodape {
-    background-color: #7B3314;
+body {
+    background-color: #fff6e8;
+}
+
+img {
     width: 100%;
-    height: 100px;
+    height: 160px;
+}
+
+svg {
+    height: 50px;
+}
+
+.acessivel {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip-path: inset(50%);
+    white-space: nowrap;
+}
+
+.cardis {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    padding: 100px 50px;
+}
+
+.card {
+    width: 290px;
+    height: 500px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    margin-bottom: 100px;
+    box-shadow: 0 4px 4px 2px #00000025;
+    align-items: center;
+}
+
+.card .nome {
+    /* background-color: aquamarine; */
+    padding: 0 30px;
+}
+
+.card img {
+    width: 150px;
+    height: 200px;
 }
