--- a/Home/style.css
+++ b/Home/style.css
@@ -26,6 +26,7 @@ header {
     width: 100%;
     height: 100%;
     align-items: center;
+    margin: 0 0 0 0;
 
 }
 
@@ -33,34 +34,37 @@ header {
     position: absolute;
     color: #ffffff;
     top: 200px;
-    font-size: 150px;
-    right: 355px;
+    font-size: 200px;
+    right: 280px;
     justify-content: center;
 }
 
 .cabecalho_vela h3 {
     position: absolute;
     color: #ffffff;
-    font-size: 60px;
-    right: 400px;
+    font-size: 80px;
+    right: 200px;
     justify-content: center;
-    right: 50px;
-    top: 350px;
+    right: 100px;
+    top: 420px;
 }
 
-
+h1 {
+    margin: 0px 0px 0 50px;
+}
 
 .pagina_inicial {
     width: 90%;
     max-width: 1440px;
-    margin: 0 auto;
+
     display: flex;
     left: 100px;
     color: #ffffff;
     position: absolute;
     top: 0;
     left: 0;
-    margin: 20px;
+
+    margin: 20px 20px;
     align-items: center;
 
 }
@@ -100,10 +104,50 @@ header {
 
 }
 
+.colecao_outono {
+    display: flex;
+
+}
+
+.colecao_outono div {
+    margin: 100px 150px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+
+}
+
+.colecao_outono h2 {
+    font-size: 60px;
+    font-family: "Baskervville", serif;
+    color: #712708;
+
+}
+
+.colecao_outono a {
+    font-size: 40px;
+    font-family: "Baskervville", serif;
+
+}
 
 .container_cabecalho svg {
     height: 35px;
     fill: #b0b0b0;
     cursor: pointer;
 
+}
+
+.colecao_outono img {
+    max-width: 500px;
+    margin: 70px 150px;
+    display: flex;
+    left: 10px;
+}
+
+.container_estacoes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 2%;
 }
