--- a/Home/style.css
+++ b/Home/style.css
@@ -16,43 +16,6 @@ header {
     height: 80px;
 }
 
-.cabecalho_vela img {
-    position: relative;
-}
-
-.cabecalho_vela img {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    margin: 0 0 0 0;
-
-}
-
-.cabecalho_vela h2 {
-    position: absolute;
-    color: #ffffff;
-    top: 200px;
-    font-size: 200px;
-    right: 280px;
-    justify-content: center;
-}
-
-.cabecalho_vela h3 {
-    position: absolute;
-    color: #ffffff;
-    font-size: 80px;
-    right: 200px;
-    justify-content: center;
-    right: 100px;
-    top: 420px;
-}
-
-h1 {
-    margin: 0px 0px 0 50px;
-}
-
 .pagina_inicial {
     width: 90%;
     max-width: 1440px;
@@ -87,30 +50,44 @@ h1 {
 
 }
 
-.cadastro {
-    width: 90%;
-    max-width: 1440px;
-    margin: 0 auto;
+/* BANNER */
+.banner {
+    background-image: url("../assets/foto\ poster.png");
+    aspect-ratio: 3.2;
+    width: 100vw;
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
-    left: 100px;
+    justify-content: end;
+    margin-bottom: 100px;
+}
+
+.banner .cabecalho_vela{
+    width: 50%;
     color: #ffffff;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 6px;
-    height: 80px;
-    padding: 0 15px;
-    font-weight: 200px;
+    flex-direction: column;
+    justify-content: center;
+}
 
+.banner .cabecalho_vela span:first-child{
+    font-size: 156px;
+}
+
+.banner .cabecalho_vela span:last-child{
+    font-size: 64px;
+    margin-left: 150px;
 }
 
 .colecao_outono {
-    display: flex;
 
+    display: flex;
+    max-height: 300px;
+       margin: 0 150px;
+    gap: 10rem;
 }
 
 .colecao_outono div {
-    margin: 100px 150px;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -125,9 +102,10 @@ h1 {
 
 }
 
-.colecao_outono a {
+.colecao_outono p {
     font-size: 40px;
     font-family: "Baskervville", serif;
+    
 
 }
 
@@ -138,16 +116,33 @@ h1 {
 
 }
 
-.colecao_outono img {
-    max-width: 500px;
-    margin: 70px 150px;
-    display: flex;
-    left: 10px;
-}
 
 .container_estacoes {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 2%;
+    margin-top: 115px;
+    max-height: 800px;
+
+}
+
+
+footer {
+    width: 100%;
+    height: 30px;
+    background-color: #712708;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+}
+
+
+@media screen and (max-width: 1150px) {
+
+.colecao_outono{
+    flex-wrap: wrap;
+}
+
 }
