--- a/Cadastro/style.css
+++ b/Cadastro/style.css
@@ -2,10 +2,12 @@
     padding: 0;
 
     box-sizing: border-box;
-    font-family: "Bellota", system-ui;
+    /* font-family: "Bellota", system-ui; */
     /* background-color: blueviolet; */
 }
 
+/* font-family: "Baskervville", serif;
+   font-family: "Instrument Sans", sans-serif; */
 
 :root {
     ---corPrincipal: #7B3314;
@@ -13,10 +15,9 @@
     --sobra: 0 4px 4px 2px #00000025;
 }
 
-/* font-family: "Baskervville", serif;
-   font-family: "Instrument Sans", sans-serif; */
 body {
     background-color: #F6EBE1;
+    
 }
 
 header {
@@ -32,6 +33,59 @@ header {
     clip-path: inset(50%);
     white-space: nowrap;
 }
+
+body{
+    padding: 0;
+    margin: 0;
+}
+
+
+.container_cabecalho{
+        justify-content: space-between;
+    max-height: 80.88px;
+    width: 90%;
+    max-width: 1440px;
+    font-family: "Italiana", sans-serif;
+    display: flex;
+    left: 100px;
+    color: #ffffff;
+    width: 90%;
+    margin: 0 auto;
+
+    top: 0;
+    left: 0;
+    
+    max-width: 1440px;
+    
+    align-items: center;
+}
+
+.pagina_inicial {
+
+}
+
+
+.colecao {
+    gap: 50px;
+    display: flex;
+    left: 100px;
+    color: #ffffff;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 80px;
+    padding: 0 15px;
+    font-weight: 200px;
+    font-size: 25px;
+
+}
+.container_cabecalho svg {
+    height: 35px;
+    fill: #b0b0b0;
+    cursor: pointer;
+
+}
+
 
 /* cadastro */
 
@@ -78,7 +132,10 @@ header {
 .container_cadastro h2 {
     font-size: 48px;
     margin-top: 100px;
-
+    margin-bottom: 0;
+    font-family: "Italiana", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 
@@ -202,6 +259,37 @@ input[type="button"] {
 
 }
 
+
+.rodape{
+    width: 100%;
+    height: 25px;
+    background-color: #7B3314;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+footer img {
+    width: 100px;
+    height: 100%;
+}
+footer{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 100%;
+    background-color: #ffd188;
+    height: 50px;
+    align-items: center;
+}
+
+footer p{
+    font-size: 40px;
+    text-align: center;
+    font-family: "Julius Sans One", sans-serif;
+}
+
+
+
 @media screen and (max-width: 1000px) {
     table {
         width: 98%;
@@ -318,9 +406,11 @@ td{
 }
 
 footer p{
-    font-size: 20px;
+    color: #ffffff;
+    font-size: 40px;
     text-align: center;
-    font-family: "Julius Sans One", sans-serif;
+        font-family: "Italiana", sans-serif;
+
 }
 
 .fim{
