--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: "Bellota", system-ui;
+    /* font-family: "Bellota", system-ui; */
 }
 
 body {
@@ -8,6 +8,47 @@ body {
     padding: 0;
     margin: 0;
 }
+
+header {
+    background-color: #7B3314;
+    height: 80px;
+    align-items: center;
+    justify-content: end;
+}
+
+.pagina_produtos {
+    width: 90%;
+    max-width: 1440px;
+    display: flex;
+    color: #ffffff;
+    position: absolute;
+    align-items: center;
+    margin: 0 100px;
+}
+
+.pagina_produtos img {
+    margin-top: 25px;
+    height: 30px;
+    width: 100px;
+}
+
+.colecao {
+    gap: 50px;
+    width: 90%;
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    left: 100px;
+    color: #ffffff;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 80px;
+    padding: 0 15px;
+    font-size: 25px;
+
+}
+
 
 img {
     width: 100%;
@@ -62,7 +103,7 @@ svg {
     height: 200px;
 }
 
-.rodape{
+.rodape {
     width: 100%;
     height: 25px;
     background-color: #7B3314;
@@ -77,7 +118,20 @@ footer img {
 }
 
 @media screen and (max-width: 400px) {
+
+    .pagina_produtos img {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+        clip-path: inset(50%);
+        white-space: nowrap;
+    }
     
+    .colecao p{
+        margin: 50px 10px 10px 0px;
+    }
+
     .cardis {
         display: flex;
         flex-wrap: wrap;
@@ -85,7 +139,7 @@ footer img {
         justify-content: center;
         padding: 50px 15px;
     }
-    
+
     .card {
         width: 150px;
         height: 250px;
@@ -101,12 +155,12 @@ footer img {
         align-items: center;
         cursor: pointer;
     }
-    
+
     .card img {
         width: 80px;
         height: 100px;
     }
-    
+
     .nome {
         font-size: 13px;
     }
