--- a/Cadastro/style.css
+++ b/Cadastro/style.css
@@ -60,11 +60,6 @@ body{
     align-items: center;
 }
 
-.pagina_inicial {
-
-}
-
-
 .colecao {
     gap: 50px;
     display: flex;
@@ -79,6 +74,7 @@ body{
     font-size: 25px;
 
 }
+
 .container_cabecalho svg {
     height: 35px;
     fill: #b0b0b0;
@@ -412,7 +408,12 @@ footer p{
         font-family: "Italiana", sans-serif;
 
 }
+/*RODAPÉ*/
+.footer {
+    width: 100%;
 
+    background-color: #7B3314;
+}
 .fim{
 margin-bottom:  100px ;
 }
@@ -428,58 +429,64 @@ margin-bottom:  100px ;
     .box_cadastro {
         flex-direction: column;
     }
-
+    
     .cadastro_coluna1,
     .cadastro_coluna2 {
         width: 100%;
     }
-
+    
     .container_cadastro input[type="button"] {
-
+        
         padding: 10px 100px;
     }
-
-
-
-                /* lista */
-        table{
-            text-align: left;
-            max-width: 460px;
-        }
-        thead{
+    
+    
+    
+    /* lista */
+    table{
+        text-align: left;
+        max-width: 460px;
+    }
+    thead{
         display: none;
-        }
-        tr{
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 30px;
-            background-color: #ffffff;
-            border-radius: var(---arredondamento);
-            border: solid 1px var(---corPrincipal);
-            box-shadow: var(--sobra);
-        }
-        td{
-            border-bottom: none;
-
-        }
-        td::before{
-            content: attr(data-cell) ;
-            font-weight: 600;
-            border-bottom: solid 2px #00000025;
-        }
+    }
+    tr{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 30px;
+        background-color: #ffffff;
+        border-radius: var(---arredondamento);
+        border: solid 1px var(---corPrincipal);
+        box-shadow: var(--sobra);
+    }
+    td{
+        border-bottom: none;
         
-        td:last-child{
-            align-self: flex-end;
-
-        }
-
-
-
-
+    }
+    td::before{
+        content: attr(data-cell) ;
+        font-weight: 600;
+        border-bottom: solid 2px #00000025;
+    }
+    
+    td:last-child{
+        align-self: flex-end;
+        
+    }
+    
+    
+    
+    
 }
 
-/*RODAPÉ*/
-.footer {
-    width: 100%;
-    background-color: #7B3314;
-}
+@media screen and (max-width: 480px) {
+
+.colecao a{
+
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip-path: inset(50%);
+    white-space: nowrap;}
+}    
