--- a/style.css
+++ b/style.css
@@ -9,6 +9,18 @@ body {
     margin: 0;
 }
 
+#sombra {
+    width: 100vw;
+    height: 200px;
+    background-color: #7B331465;
+    position: fixed;
+    z-index: 1;
+    backdrop-filter: blur(10px);
+    top: -210px;
+    overflow-y: hidden;
+    transition: .5s;
+}
+
 header {
     background-color: #7B3314;
     height: 80px;
@@ -16,17 +28,24 @@ header {
     justify-content: end;
 }
 
+.menu_barras {
+    width: 50px;
+    color: #ffffff;
+    display: none;
+    z-index: 2;
+}
+
 .pagina_produtos {
     width: 90%;
     max-width: 1440px;
     display: flex;
     color: #ffffff;
-    position: absolute;
+    /* position: absolute; */
     align-items: center;
     margin: 0 100px;
 }
 
-.pagina_produtos img {
+.logo {
     margin-top: 25px;
     height: 30px;
     width: 100px;
@@ -46,17 +65,22 @@ header {
     height: 80px;
     padding: 0 15px;
     font-size: 25px;
+    z-index: 3;
+}
 
+.lupa_k {
+    width: 35px;
 }
 
 
-img {
+.banner {
     width: 100%;
     height: 160px;
 }
 
 svg {
     height: 50px;
+    
 }
 
 .acessivel {
@@ -117,19 +141,37 @@ footer img {
     height: 100%;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 550px) {
 
-    .pagina_produtos img {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        overflow: hidden;
-        clip-path: inset(50%);
-        white-space: nowrap;
+    .container_cabecalho {
+        display: flex;
+        justify-content: space-between;
+        padding: 25px;
     }
-    
-    .colecao p{
-        margin: 50px 10px 10px 0px;
+
+    .pagina_produtos {
+        padding: 10px;
+        position: fixed;
+        top: -100px;
+        overflow-y: hidden;
+        top: -100px;
+        right: 30px;
+        transition: .5s;
+        width: 80%;
+        z-index: 2;
+    }
+
+
+    .menu_barras {
+        display: block;
+        right: 50px;
+        z-index: 2;
+    }
+
+
+    .colecao p {
+        top: -100px;
+
     }
 
     .cardis {
@@ -165,7 +207,7 @@ footer img {
         font-size: 13px;
     }
 
-    img {
+    .banner {
         width: 100%;
         height: 80px;
     }
