--- a/Home/style.css
+++ b/Home/style.css
@@ -16,6 +16,26 @@ header {
     height: 80px;
 }
 
+#sombra {
+    position: fixed;
+    top: -210px;
+    background-color: #FFD18865;
+    /* transform: translateX(100%); */
+
+    width: 130vw;
+    height: 200px;
+    z-index: 1;
+    overflow-y: hidden;
+    transition: .5s;
+    backdrop-filter: blur(10px);
+}
+
+.menu_barras {
+  width: 50px;
+  color: #000000;
+  display: none;
+  z-index: 2;
+}
 .pagina_inicial {
     width: 90%;
     max-width: 1440px;
@@ -30,6 +50,7 @@ header {
     margin: 0px 20px;
 
 }
+
 h1 {
     margin-top: 20px;
 }
@@ -124,6 +145,9 @@ h1 {
 
 
 }
+.container_cabecalho{
+    display: flex;
+}
 
 .container_cabecalho svg {
     height: 35px;
@@ -212,13 +236,13 @@ footer {
         align-items: center;
     }
 
-    .colecao_outono img{
+    .colecao_outono img {
         margin-bottom: 50px;
         width: 90%;
         max-width: 310px;
     }
-    
-    .colecao_outono div{
+
+    .colecao_outono div {
         width: 90%;
         max-width: 400px;
     }
@@ -241,12 +265,34 @@ footer {
 }
 
 @media screen and (max-width: 420px) {
-    .colecao{
+    .colecao {
         gap: 10px;
         align-items: center;
         display: flex;
         position: absolute;
-       
+
     }
+}
+
+@media screen and (max-width: 768px) {
+    .icone_home {
+        display: none;
     }
 
+    .colecao {
+    position: fixed;
+    top: -100px;
+    overflow-y: hidden;
+    top: -100px;
+    z-index: 2;
+    right: 30px;
+    transition: .5s;
+    width: 80%;
+  }
+
+    .menu_barras {
+        
+        display: block;
+        right: 60px;
+    }
+}
